// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Col > default breakpoint > should render with span based styles 1`] = `
<div>
  <div
    class="_base_e5430b"
    style="--span: 6;"
  />
</div>
`;

exports[`Col > default breakpoint > should render with span/skip based styles 1`] = `
<div>
  <div
    class="_base_e5430b _skip_e5430b"
    style="--span: 6; --skip: 6;"
  />
</div>
`;

exports[`Col > mobile breakpoint > should render with span based styles 1`] = `
<div>
  <div
    class="_base_e5430b"
    style="--span: 6; --span-kilo: 12;"
  />
</div>
`;

exports[`Col > mobile breakpoint > should render with span/skip based styles 1`] = `
<div>
  <div
    class="_base_e5430b _skip_e5430b"
    style="--span: 6; --span-kilo: 12; --skip: 6; --skip-kilo: 3;"
  />
</div>
`;

exports[`Col > should render with default styles 1`] = `
<div>
  <div
    class="_base_e5430b"
  />
</div>
`;
